# HPC-classes

./: .gitignore  pyproject.toml  requirements.txt
aula7/: Cópia_de_Aula07_CUDA.ipynb  README.md
aula7/code/: questao1.cu  questao2.cu  questao3.cu  questao4.cu  questao5.cu  questao6.cu  questao7.cu
aula7/compiled/: questao1  questao2  questao3  questao4  questao5  questao6  questao7
aula7/resultados/: result1.txt  result2.txt  result3.txt  result4.txt  result5.txt  result6.txt  result7.txt
lista1/: soma_paralela.cu
lista2/: CAD_lista2_PedroSaraiva.ipynb  questao1.txt  questao2.txt  questao3.txt  questao4.cu  questao5.cu  questao6.txt  questao6_corrigido.cu  questao7_a  questao7_a.cu  questao7_b  questao7_b.cu  questao7_base  questao7_base.cu  questao7_c  questao7_c.cu  questao7_conclusoes.txt  questao7_e  questao7_e.cu  questao7_script.sh
lista3/: lista3.txt  resposta1.txt  resposta2.txt  resposta3.txt  resposta4.txt  resposta5.txt  resposta6.txt  resposta7.txt  resposta8.txt  resumo.txt
trabalho-final/: PAPER.md  PAPER.tex  README.md  algorithm_comparison_20250622_165556.csv  compare_algorithms.py  detailed_results_20250622_165556.csv  download_datasets.sh  environment.yml  profile.speedscope.json  requirements.txt  run_complete_analysis.py  run_instance_selection.py  run_parallel_instance_selection.py  run_random_forest.py  test_setup.py  validate_reduced_datasets.py
trabalho-final/rf_modules/: __init__.py  data_loader.py  instance_selector.py  logger_setup.py  model.py  parallel_instance_selector.py  profiler.py  visualization.py
