[project]
name = "hpc-classes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaggle>=1.7.4.2",
    "kagglehub>=0.3.12",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "mealpy>=3.0.1",
    "numba>=0.61.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "polars>=1.29.0",
    "psutil>=7.0.0",
    "py-spy>=0.4.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
